--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1>Hello World.</h1>
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<title> Activities.
+		</title>
+		<link href="/Style.css" type="text/css" rel="stylesheet" >
+	</head>
+
+	<body>
+		<h1>Hello World!</h1>
+		<h2>Hi. My name is Kye Smith.<br> I am a University of 
+		Sheffield Electronic Engineering Undergraduate
+		 and this website will shortly look quite swell indeed.<br> It will have you
+		 all informed about me and my thrilling life
+		 and whatnot.</h2>
+	</body>
+</html>
