Troubleshooting. Site not live.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title> Activities.
 		</title>
-		<link href="/Style.css" type="text/css" rel="stylesheet" >
+		<link href="/style.css" type="text/css" rel="stylesheet" >
 	</head>
 
 	<body>
