Working, css sorted, text finalised. See you soon with more mad code.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 	<body>
 		<h1>Hello World!</h1>
-		<h2>Hi. My name is Kye Smith.<br> I am a University of 
+		<h2>My name is Kye Smith.<br> I'm a University of 
 		Sheffield Electronic Engineering Undergraduate
-		 and this website will shortly look quite swell indeed.<br> It will have you
+		 and this website will be looking a wee bit scrummy in the near future and it'll have you
 		 all informed about me and my thrilling life
-		 and whatnot.</h2>
+		 and whatnot.<br>Watch this space.</h2>
 	</body>
 </html>
