Changed head title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title> So Much More Room For Activities
+		<title> Activities yo.
 		</title>
 		<link href="Style.css" type="text/css" rel="stylesheet" >
 	</head>
