--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
 		<title> Activities yo.
 		</title>
 		<link href="Style.css" type="text/css" rel="stylesheet" >
+		<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
 	</head>
 
 	<body>
 		<h1>Hello World!</h1>
-		<h2>My name is Kye Smith.<br> I'm a University of 
-		Sheffield Electronic Engineering Undergraduate
-		 and this website will be looking a wee bit scrummy in the near future and it'll have you
-		 all informed about me and my thrilling life
-		 and whatnot.<br>Watch this space.</h2>
+		<h2><a href="https://youtu.be/sNPnbI1arSE?t=9">My name is</a> Kye Smith.</h2> 
+		<p>I'm a third year at the University of Sheffield, studying Electronic Engineering.
+		This website is a little bit of a hobby project for me and will be the guinea pig 
+		for my first time using HTML.
+		In the near future, the site should become a lot more advanced and a wee bit prettier.  
+		The plan is to show things such as my CV, email, portfolio and whatever other cool 'n' 
+		hip 'n' swag 'n' phat things I decide to throw in. Maybe the odd cat video. I don't know.
+		<a href="https://www.youtube.com/watch?v=G_-J9TdJTm0">But come back soon</a>.</p>
 	</body>
 </html>
