--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 	</head>
 
 	<body>
-		<h1>Hello World!</h1>
-		<h2><a href="https://youtu.be/sNPnbI1arSE?t=9">My name is</a> Kye Smith.</h2> 
-		<p>I'm a third year at the University of Sheffield, studying Electronic Engineering.
-		This website is a little bit of a hobby project for me and will be the guinea pig 
-		for my first time using HTML.
-		In the near future, the site should become a lot more advanced and a wee bit prettier.  
-		The plan is to show things such as my CV, email, portfolio and whatever other cool 'n' 
-		hip 'n' swag 'n' phat things I decide to throw in. Maybe the odd cat video. I don't know.
-		<a href="https://www.youtube.com/watch?v=G_-J9TdJTm0">But come back soon</a>.</p>
+		<div class: Text-all>
+		<div class: Text-Hello>
+			<h1>Hello World!</h1> 
+		</div>
+		<div class:Text-Bio>
+			<h2><a href="https://youtu.be/sNPnbI1arSE?t=9">My name is</a> Kye Smith.</h2> 
+			<p>I'm a third year at the University of Sheffield, studying Electronic Engineering.
+			This website is a little bit of a hobby project for me and will be the guinea pig 
+			for my first time using HTML.
+			In the near future, the site should become a lot more advanced and a wee bit prettier.  
+			The plan is to show things such as my CV, email, portfolio and whatever other cool 'n' 
+			hip 'n' swag 'n' phat things I decide to throw in. Maybe the odd cat video. I don't know.
+			<a href="https://www.youtube.com/watch?v=G_-J9TdJTm0">But come back soon</a>.</p>
+		</div>	
+		</div>
 	</body>
 </html>
