--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	</head>
 
 	<body>
-		<div class: Text-all>
-		<div class: Text-Hello>
+		<div class="textAll">
+		<div class="textHello">
 			<h1>Hello World!</h1> 
 		</div>
-		<div class:Text-Bio>
+		<div class="textBio">
 			<h2><a href="https://youtu.be/sNPnbI1arSE?t=9">My name is</a> Kye Smith.</h2> 
 			<p>I'm a third year at the University of Sheffield, studying Electronic Engineering.
 			This website is a little bit of a hobby project for me and will be the guinea pig 
