--- a/index.html
+++ b/index.html
@@ -26,24 +26,24 @@
 		</div>
 		<table>
 			<tr>
-				<tc> </tc>
-				<tc class="tableRow1"> </tc>
-				<tc> </tc>
+				<td> </td>
+				<td class="tableRow1"> </td>
+				<td> </td>
 			</tr>
 			<tr>
-				<tc> </tc>
-				<tc class="tableRow2"> </tc>
-				<tc> </tc>
+				<td> </td>
+				<td class="tableRow2"> </td>
+				<td> </td>
 			</tr>
 			<tr>
-				<tc> </tc>
-				<tc class="tableRow3"> </tc>
-				<tc> </tc>
+				<td> </td>
+				<td class="tableRow3"> </td>
+				<td> </td>
 			</tr>
 			<tr>
-				<tc> </tc>
-				<tc class="tableRow4"> </tc>
-				<tc> </tc>
+				<td> </td>
+				<td class="tableRow4"> </td>
+				<td> </td>
 			</tr>
 
 		</table>	
