--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<a href="https://www.youtube.com/watch?v=G_-J9TdJTm0">But come back soon</a>.</p>
 		</div>	
 		</div>
-		<table>
+		<table style="width: 100%;">
 			<tr>
 				<td> </td>
 				<td class="tableRow1"> </td>
