--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
 			<a href="https://www.youtube.com/watch?v=G_-J9TdJTm0">But come back soon</a>.</p>
 		</div>	
 		</div>
-		<table style="width: 100%;">
+		<table class="table";>
 			<tr>
-				<td> </td>
-				<td class="tableRow1"> </td>
-				<td> </td>
+				<td class="tableRowN"> </td>
+				<td class="tableRoww"> </td>
+				<td class="tableRowN"> </td>
 			</tr>
 			<tr>
-				<td> </td>
-				<td class="tableRow2"> </td>
-				<td> </td>
+				<td class="tableRowN"> </td>
+				<td class="tableRoB"> </td>
+				<td class="tableRowN"> </td>
 			</tr>
 			<tr>
-				<td> </td>
-				<td class="tableRow3"> </td>
-				<td> </td>
+				<td class="tableRowN"> </td>
+				<td class="tableRowW"> </td>
+				<td class="tableRowN"> </td>
 			</tr>
 			<tr>
-				<td> </td>
-				<td class="tableRow4"> </td>
-				<td> </td>
+				<td class="tableRowN"> </td>
+				<td class="tableRowB"> </td>
+				<td class="tableRowN"> </td>
 			</tr>
 
 		</table>	
