troubleshooting colored tables

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<table class="table";>
 			<tr>
 				<td class="tableRowN"> </td>
-				<td class="tableRoww"> </td>
+				<td class="tableRowW"> </td>
 				<td class="tableRowN"> </td>
 			</tr>
 			<tr>
