troubleshooting colored tables

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			</tr>
 			<tr>
 				<td class="tableRowN"> </td>
-				<td class="tableRoB"> </td>
+				<td class="tableRoWB"> </td>
 				<td class="tableRowN"> </td>
 			</tr>
 			<tr>
