--- a/index.html
+++ b/index.html
@@ -1,49 +1,41 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<title> Activities yo.
-		</title>
-		<link href="Style.css" type="text/css" rel="stylesheet" >
-		<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
-	</head>
+<head>
+	<title> Activities yo.
+	</title>
+	<link href="Style.css" type="text/css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
+</head>
 
-	<body>
-		<div id="banner">
-			<img src="signaturebanner.png" alt="Bossman Signature."/>
-		</div>
-		<div class="textBio">
-			<h2><a href="https://youtu.be/sNPnbI1arSE?t=9" target="_blank">My name is</a> Kye Smith.</h2>
-			<p>I'm a third year at the University of Sheffield, studying Electronic Engineering.
-			This website is a little bit of a hobby project for me and will be the guinea pig
-			for my first time using HTML.
-			In the near future, the site should become a lot more advanced and a wee bit prettier.
-			The plan is to show things such as my CV, email, portfolio and whatever other cool 'n'
-			hip 'n' swag 'n' phat things I decide to throw in. Maybe the odd cat video. I don't know.
+<body>
+	<div class="banner">
+		<img src="signaturebanner.png" alt="Bossman Signature." />
+	</div>
+	<div class="textBio">
+		<h1><a href="https://youtu.be/sNPnbI1arSE?t=9" target="_blank">My name is</a> Kye Smith.</h1>
+		<p>I'm a third year at the University of Sheffield, studying Electronic Engineering. This website is a little bit of a hobby project for me and will be the guinea pig for my first time using HTML. In the near future, the site should become a lot more advanced
+			and a wee bit prettier. The plan is to show things such as my CV, email, portfolio and whatever other cool 'n' hip 'n' swag 'n' phat things I decide to throw in. Maybe the odd cat video. I don't know.
 			<a href="https://www.youtube.com/watch?v=G_-J9TdJTm0" target="_blank">But come back soon</a>.</p>
-		</div>
-		<table class="table";>
-			<tr>
-				<td class="tableRowN"> </td>
-				<td class="tableRowW"> </td>
-				<td class="tableRowN"> </td>
-			</tr>
-			<tr>
-				<td class="tableRowN"> </td>
-				<td class="tableRowB"> </td>
-				<td class="tableRowN"> </td>
-			</tr>
-			<tr>
-				<td class="tableRowN"> </td>
-				<td class="tableRowW"> </td>
-				<td class="tableRowN"> </td>
-			</tr>
-			<tr>
-				<td class="tableRowN"> </td>
-				<td class="tableRowB"> </td>
-				<td class="tableRowN"> </td>
-			</tr>
+	</div>
+	<table id="myTable" ;>
+		<tr>
+			<td id="tableRow1"> </td>
+		</tr>
+		<tr>
+			<td id="tableRow2"> </td>
+		</tr>
+		<tr>
+			<td id="tableRow3"> </td>
+		</tr>
+		<tr>
+			<td id="tableRow4"> </td>
+		</tr>
+	</table>
+</body>
 
-		</table>
-	</body>
+</html>
+table>
+</body>
+
 </html>
