Skeleton ninety percent complete. Need more page ideas and need to fill up portfolio page. Also need to change banner when i finish the new one and rethink the colour scheme/theme. Happy for now.

--- a/index.html
+++ b/index.html
@@ -2,34 +2,26 @@
 <html>
 
 <head>
-	<title> Activities yo.
-	</title>
-	<link href="Style.css" type="text/css" rel="stylesheet">
+	<title> Activities yo. </title>
+	<link href="style.css" type="text/css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
 </head>
 
 <body>
-	<div class="parallaxBanner"> </div>
-	<div class="textBio">
-		<h1><a href="https://youtu.be/sNPnbI1arSE?t=9" target="_blank">My name is</a> Kye Smith.</h1>
-		<p>I'm a third year at the University of Sheffield, studying Electronic Engineering. This website is a little bit of a hobby project for me and will be the guinea pig for my first time using HTML. In the near future, the site should become a lot more advanced
-			and a wee bit prettier. The plan is to show things such as my CV, email, portfolio and whatever other cool 'n' hip 'n' swag 'n' phat things I decide to throw in. Maybe the odd cat video. I don't know.
-			<a href="https://www.youtube.com/watch?v=G_-J9TdJTm0" target="_blank">But come back soon</a>.</p>
+	<div class="parallaxBanner" title="Bossman Signature.">
 	</div>
-	<table id="myTable">
-		<tr>
-			<td id="tableRow1"> </td>
-		</tr>
-		<tr>
-			<td id="tableRow2"> </td>
-		</tr>
-		<tr>
-			<td id="tableRow3"> </td>
-		</tr>
-		<tr>
-			<td id="tableRow4"> </td>
-		</tr>
-	</table>
+	<div class="all">
+		<div id="navBar">
+			<ul>
+				<li> <a href="index.html">Home</a> </li>
+				<li> <a href="pf.html">Portfolio</a> </li>
+			</ul>
+		</div>
+		<div class="bio">
+			<p>Hello there you.<br> As you may have guessed, <a href="https://youtu.be/sNPnbI1arSE?t=9">my name is</a>				Kye Smith. I'm a self-professed comedian and third year Electronic Engineering
+				undergraduate at the University of sheffield.</p>
+		</div>
+	</div>
 </body>
 
 </html>
