--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
 			</ul>
 		</div>
 		<div class="bio">
-			<p>Hello there you.<br> As you may have guessed, <a href="https://youtu.be/sNPnbI1arSE?t=9">my name is</a>				Kye Smith. I'm a self-professed comedian and third year Electronic Engineering
-				undergraduate at the University of sheffield.</p>
+			<p>Hello there you.<br> As you may have guessed,
+				<a href="https://youtu.be/sNPnbI1arSE?t=9">my name is</a> Kye Smith. I'm
+				a self-professed comedian and third year Electronic Engineering undergraduate
+				at the University of sheffield and this is my website. Feel free to take
+				a look around.</p>
 		</div>
 	</div>
 </body>
 
 </html>
+ml>
