--- a/pf.html
+++ b/pf.html
@@ -16,7 +16,7 @@
     <div class="about">
         <p>Welcome to my portfolio page! The intention is to fill it with work
             from my degree course and any projects i've taken up in my own time.
-            One of such projects is this very website actually!<br> The Whole
+            One of such projects is this very website actually!<br> The whole
             thing is hosted on github pages
             <a href="https://github.com/SmithKy3/Kyesmith.me">(here, take a gander)</a>.
             <br>I'll be uploading more of my work soon. For now, throw on some
