changed nav bar and parallax banner. also changed theme and added cool button for scrolling past the banner.

--- a/pf.html
+++ b/pf.html
@@ -7,11 +7,9 @@
 </head>
 
 <body>
-    <div id="navBar">
-        <ul>
-            <li> <a href="index.html">Home</a> </li>
-            <li> <a href="pf.html">Portfolio</a> </li>
-        </ul>
+    <div class="navBar">
+        <a class="btn btn-h" href="index.html#navBar">Home</a>
+        <a class="btn btn-p" href="pf.html">Portfolio</a>
     </div>
     <div class="about">
         <p>Welcome to my portfolio page! The intention is to fill it with work
