--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
 	<title> Activities yo. </title>
 	<link href="style.css" type="text/css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
+	<link href="animate.css" type="text/css" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="kye.js"></script>
 </head>
 
 <body>
-	<div class="parallaxBanner" title="Bossman Signature.">
+	<div class="parallaxBanner">
+		<div id="bannerImg"></div>
+		<a href="#navBar"><span id="arrow" class="animated infinite jello">&#9660;</span></a>
 	</div>
 
 	<div class="all">
-
-		<div id="navBar">
-			<ul>
-				<li> <a href="index.html">Home</a> </li>
-				<li> <a href="pf.html">Portfolio</a> </li>
-			</ul>
+		<div class="navBar">
+			<a id="navBar"></a>
+			<a class="btn btn-h" href="index.html#navBar">Home</a>
+			<a class="btn btn-p" href="pf.html">Portfolio</a>
 		</div>
 		<div class="bio">
 			<p>Hello there you.<br> As you may have guessed,
@@ -29,5 +32,6 @@
 
 	</div>
 </body>
+
 
 </html>
