may have fixed the issue

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 </head>
 
 <body>
-	<div class="parallaxBanner">
-		<div id="bannerImg"></div>
+	<div class="parallaxArea">
+		<div class="parallaxImg">
+			<img src="helloWorld.gif">
+		</div>
+		<br>
 		<a href="#navBar"><span id="arrow" class="animated infinite jello">&#9660;</span></a>
 	</div>
 
