fixed up banner and changed background color. Gif now has set size and is centered, works on all devices (hopefully). Scroll button/arrow is bigger and animated. lols page and pf next

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 </head>
 
 <body>
-	<div class="parallaxArea">
+	<div class="parallax">
 		<div class="parallaxImg">
 			<img src="helloWorld.gif">
 		</div>
-		<br>
-		<a href="#navBar"><span id="arrow" class="animated infinite jello">&#9660;</span></a>
+		<div class="parallaxBtn">
+			<br>
+			<a href="#navBar"><span id="arrow" class="animated infinite jello">&#9660;</span></a>
+		</div>
 	</div>
 
 	<div class="all">
