finished applying the new theme and adding to the pf page. All looking lovely, all styled, all acidbumsex

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title> Activities yo. </title>
 	<link href="style.css" type="text/css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Poppins|Titillium+Web" rel="stylesheet">
 	<link href="animate.css" type="text/css" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="kye.js"></script>
@@ -17,7 +17,7 @@
 		</div>
 		<div class="parallaxBtn">
 			<br>
-			<a href="#navBar"><span id="arrow" class="animated infinite jello">&#9660;</span></a>
+			<a href="#navBar"><span id="arrow" class="animated infinite tada">&#9660;</span></a>
 		</div>
 	</div>
 
@@ -28,11 +28,11 @@
 			<a class="btn btn-p" href="pf.html">Portfolio</a>
 		</div>
 		<div class="bio">
-			<p>Hello there you.<br> As you may have guessed,
-				<a href="https://youtu.be/sNPnbI1arSE?t=9">my name is</a> Kye Smith. I'm
-				a self-professed comedian and third year Electronic Engineering undergraduate
-				at the University of sheffield and this is my website. Feel free to take
-				a look around.</p>
+			<p>Hello there.<br> As you may have guessed,
+				<a class="bioLinks" href="https://youtu.be/sNPnbI1arSE?t=9">my name is</a>				Kye Smith. I'm a third year Electronic Engineering undergraduate at the
+				University of sheffield and this is my website. Feel free to take a look
+				around.
+			</p>
 		</div>
 
 	</div>
