--- a/pf.html
+++ b/pf.html
@@ -4,6 +4,8 @@
 <head>
     <title> Aloha. </title>
     <link href="pf.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins|Titillium+Web" rel="stylesheet">
+    <link href="animate.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -11,14 +13,39 @@
         <a class="btn btn-h" href="index.html#navBar">Home</a>
         <a class="btn btn-p" href="pf.html">Portfolio</a>
     </div>
-    <div class="about">
-        <p>Welcome to my portfolio page! The intention is to fill it with work
-            from my degree course and any projects i've taken up in my own time.
-            One of such projects is this very website actually!<br> The whole
-            thing is hosted on github pages
-            <a href="https://github.com/SmithKy3/Kyesmith.me">(here, take a gander)</a>.
-            <br>I'll be uploading more of my work soon. For now, throw on some
-            <a href="https://youtu.be/RluUN3buUSo">smooth jazz</a> and relax.</p>
+    <div class="allText">
+        <h1 id="title" class="animated zoomInDown">Welcome to my portfolio page!</h1>
+        <br>
+        <p id="intro">The intention is to, over time, fill this page with work from my degree
+            course and with any projects i've taken up in my own time.</p>
+        <br>
+        <h1>Kyesmith.me</h1>
+        <p>It seemed rather appropriate that the first peice of work to talk about
+            on here should be the website itself! I started on this site in
+            the middle of february 2017 and it's been quite a learning curve
+            as this has been my first time using HTML. Everything i've learnt
+            so far has been from either <a href="https://www.codeacademy.com">Codeacademy</a>,
+            or from bugging my good friend, <a href="http://Jamesmilton.me">James</a>.
+            The whole thing is hosted on github pages for free
+            <a href="https://github.com/SmithKy3/Kyesmith.me">(here, take a gander)</a>,
+            and the domain name was free for a year with github's student developer
+            pack.
+            <br> I've been trying to write all of the code myself as I wanted
+            this website to be "homemade" in a sense, and i've, generally, stuck
+            to this. There are several "fancy" parts of the site that i've used
+            <a href="https://Codepen.io">Codepen</a> for due to the complexity
+            of them/the use of javascript, which I haven't used at all (yet).
+            These still required some changes to get them working/customise
+            though though so it was fun to take a look at the code and it provided
+            some insight into higher level HTML and CSS.</p>
+        <br>
+        <h1>Coming soon...</h1>
+        <p>My final year project is currently ongoing and is based around using
+            long wavelength (namely IR) photodiodes. At the minute, all I have
+            are endless Excel spreadsheets of results and i'm unsure about the
+            rules around posting this kind of stuff publicly. As soon as i've
+            asked some questions and put some of the work together i'll be uploading
+            it to here.</p>
     </div>
 </body>
 
