Finalised the home and portfolio pages. Started on the lols page, looking sick. AcidBumSex.

--- a/pf.html
+++ b/pf.html
@@ -34,10 +34,11 @@
             this website to be "homemade" in a sense, and i've, generally, stuck
             to this. There are several "fancy" parts of the site that i've used
             <a href="https://Codepen.io">Codepen</a> for due to the complexity
-            of them/the use of javascript, which I haven't used at all (yet).
-            These still required some changes to get them working/customise
-            though though so it was fun to take a look at the code and it provided
-            some insight into higher level HTML and CSS.</p>
+            of them/the use of javascript (which i haven't taken the time to
+            become accustom with... yet). These still required some changes
+            to get them working/customise though though so it was fun to take
+            a look at the code and it provided some insight into higher level
+            HTML and CSS.</p>
         <br>
         <h1>Coming soon...</h1>
         <p>My final year project is currently ongoing and is based around using
@@ -48,5 +49,23 @@
             it to here.</p>
     </div>
 </body>
+
+<script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script',
+        'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-93105385-1', 'auto');
+    ga('send', 'pageview');
+</script>
 
 </html>
