--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href="animate.css" type="text/css" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="kye.js"></script>
+
 </head>
 
 <body>
@@ -38,5 +39,22 @@
 	</div>
 </body>
 
+<script>
+	(function(i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r;
+		i[r] = i[r] || function() {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date();
+		a = s.createElement(o),
+			m = s.getElementsByTagName(o)[0];
+		a.async = 1;
+		a.src = g;
+		m.parentNode.insertBefore(a, m)
+	})(window, document, 'script',
+		'https://www.google-analytics.com/analytics.js', 'ga');
+
+	ga('create', 'UA-93105385-1', 'auto');
+	ga('send', 'pageview');
+</script>
 
 </html>
