--- a/pf.html
+++ b/pf.html
@@ -23,7 +23,7 @@
         <p>It seemed rather appropriate that the first peice of work to talk about
             on here should be the website itself! I started on this site in
             the middle of february 2017 and it's been quite a learning curve
-            as this has been my first time using HTML. Everything i've learnt
+            as this has been my first time using HTML. Everything I've learnt
             so far has been from either <a href="https://www.codeacademy.com">Codeacademy</a>,
             or from bugging my good friend, <a href="http://Jamesmilton.me">James</a>.
             The whole thing is hosted on github pages for free
@@ -31,10 +31,10 @@
             and the domain name was free for a year with github's student developer
             pack.
             <br> I've been trying to write all of the code myself as I wanted
-            this website to be "homemade" in a sense, and i've, generally, stuck
-            to this. There are several "fancy" parts of the site that i've used
+            this website to be "homemade" in a sense, and I've, generally, stuck
+            to this. There are several "fancy" parts of the site that I've used
             <a href="https://Codepen.io">Codepen</a> for due to the complexity
-            of them/the use of javascript (which i haven't taken the time to
+            of them/the use of javascript (which I haven't taken the time to
             become accustom with... yet). These still required some changes
             to get them working/customise though though so it was fun to take
             a look at the code and it provided some insight into higher level
@@ -43,9 +43,9 @@
         <h1>Coming soon...</h1>
         <p>My final year project is currently ongoing and is based around using
             long wavelength (namely IR) photodiodes. At the minute, all I have
-            are endless Excel spreadsheets of results and i'm unsure about the
-            rules around posting this kind of stuff publicly. As soon as i've
-            asked some questions and put some of the work together i'll be uploading
+            are endless Excel spreadsheets of results and I'm unsure about the
+            rules around posting this kind of stuff publicly. As soon as I've
+            asked some questions and put some of the work together I'll be uploading
             it to here.</p>
     </div>
 </body>
