--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title> Activities yo. </title>
+	<meta name="author" content="Kye Leslie Jay Smith">
 	<link href="style.css" type="text/css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins|Titillium+Web" rel="stylesheet">
 	<link href="animate.css" type="text/css" rel="stylesheet">
@@ -12,27 +13,26 @@
 </head>
 
 <body>
-	<div class="parallax">
-		<div class="parallaxImg">
-			<img src="helloWorld.gif">
-		</div>
-		<div class="parallaxBtn">
-			<br>
-			<a href="#navBar"><span id="arrow" class="animated infinite tada">&#9660;</span></a>
-		</div>
+	<div class="parallaxImg">
+		<img src="helloWorld.gif">
+	</div>
+	<div class="parallaxBtn">
+		<br>
+		<a href="#navBar"><span id="arrow" class="animated infinite tada">&#9660;</span></a>
 	</div>
 
-	<div class="all">
+	<div class="iAll">
 		<div class="navBar">
-			<a id="navBar"></a>
 			<a class="btn btn-h" href="index.html#navBar">Home</a>
 			<a class="btn btn-p" href="pf.html">Portfolio</a>
+			<a class="btn btn-wnb" href="wnb.html">the WhatNotBlog</a>
 		</div>
-		<div class="bio">
+		<a id="navBar"></a>
+		<div id="iBio">
 			<p>Hello there.<br> As you may have guessed,
-				<a class="bioLinks" href="https://youtu.be/sNPnbI1arSE?t=9">my name is</a>				Kye Smith. I'm a third year Electronic Engineering undergraduate at the
-				University of sheffield and this is my website. Feel free to take a look
-				around.
+				<a href="https://youtu.be/sNPnbI1arSE?t=9">my name is</a> Kye Smith. I'm
+				a third year Electronic Engineering undergraduate at the University of sheffield
+				and this is my website. Feel free to take a look around.
 			</p>
 		</div>
 
