--- a/pfPostOne.html
+++ b/pfPostOne.html
@@ -34,31 +34,29 @@
             </td>
             <td class="postC2">
                 <h1 class="postH1">Kyesmith.me</h1>
-                <h2class="postH2">16/03/2017</h2>
-                    <br>
-                    <p class="postP">It seemed rather appropriate that the first peice of work
-                        to talk about on here should be the website itself!
-                        I started on this site in the middle of february 2017
-                        and it's been quite a learning curve as this has been
-                        my first time using HTML. Everything I've learnt so
-                        far has been from either
-                        <a href="https://www.codeacademy.com">Codeacademy</a>,
-                        or from bugging my good friend, <a href="http://Jamesmilton.me">James</a>.
-                        The whole thing is hosted on github pages for free
-                        <a href="https://github.com/SmithKy3/Kyesmith.me">(here, take a gander)</a>,
-                        and the domain name was free for a year with github's
-                        student developer pack.
-                        <br> I've been trying to write all of the code myself
-                        as I wanted this website to be "homemade" in a sense,
-                        and I've, generally, stuck to this. There are several
-                        "fancy" parts of the site that I've used
-                        <a href="https://Codepen.io">Codepen</a> for due to
-                        the complexity of them/the use of javascript (which
-                        I haven't taken the time to become accustom with...
-                        yet). These still required some changes to get them
-                        working/customise them though so it was fun to take
-                        a look at the code and it provided some insight into
-                        higher level HTML and CSS.</p>
+                <h2 class="postH2">16/03/2017</h2>
+                <br>
+                <p class="postP">It seemed rather appropriate that the first peice of work to
+                    talk about on here should be the website itself! I started
+                    on this site in the middle of february 2017 and it's been
+                    quite a learning curve as this has been my first time using
+                    HTML. Everything I've learnt so far has been from either
+                    <a href="https://www.codeacademy.com">Codeacademy</a>, or
+                    from bugging my good friend, <a href="http://Jamesmilton.me">James</a>.
+                    The whole thing is hosted on github pages for free
+                    <a href="https://github.com/SmithKy3/Kyesmith.me">(here, take a gander)</a>,
+                    and the domain name was free for a year with github's student
+                    developer pack.
+                    <br> I've been trying to write all of the code myself as
+                    I wanted this website to be "homemade" in a sense, and I've,
+                    generally, stuck to this. There are several "fancy" parts
+                    of the site that I've used
+                    <a href="https://Codepen.io">Codepen</a> for due to the
+                    complexity of them/the use of javascript (which I haven't
+                    taken the time to become accustom with... yet). These still
+                    required some changes to get them working/customise them
+                    though so it was fun to take a look at the code and it provided
+                    some insight into higher level HTML and CSS.</p>
             </td>
             <td class="postC3"></td>
         </tr>
