minor fixes, grammar, etc...

--- a/pf.html
+++ b/pf.html
@@ -20,7 +20,7 @@
             <h1 id="pfMainTitle" class="pfTitles animated flipInX">Welcome to my portfolio page!</h1>
             <br>
             <p id="pfIntro" class="pfParas">This page will, over time, be filled with work from my degree course
-                and with any projects i've taken up in my own time.
+                and with any projects I've taken up in my own time.
             </p>
             <br><br>
 
@@ -33,12 +33,12 @@
             <br><br>
 
             <h1 class="postH1">Coming soon...</h1>
-            <p class=postP>My final year project is currently ongoing and is based around using
-                long wavelength (namely IR) photodiodes. At the minute, all
-                I have are endless Excel spreadsheets of results and I'm unsure
-                about the rules around posting this kind of stuff publicly.
-                As soon as I've asked some questions and put some of the work
-                together I'll be uploading it to here.</p>
+            <p class=postP>My final year project is currently ongoing and is based around long
+                wavelength (namely IR) photodiodes. At the minute, all I have
+                are endless Excel spreadsheets of results and I'm unsure about
+                the rules around posting this kind of stuff publicly. As soon
+                as I've asked some questions and put some of the work together
+                I'll be uploading it to here.</p>
         </div>
 </body>
 
