--- a/pfPostOne.html
+++ b/pfPostOne.html
@@ -36,9 +36,9 @@
                 <h1 class="postH1">Kyesmith.me</h1>
                 <h2 class="postH2">16/03/2017</h2>
                 <br>
-                <p class="postP">It seemed rather appropriate that the first peice of work to
+                <p class="postP">It seemed rather appropriate that the first piece of work to
                     talk about on here should be the website itself! I started
-                    on this site in the middle of february 2017 and it's been
+                    on this site in the middle of February 2017 and it's been
                     quite a learning curve as this has been my first time using
                     HTML. Everything I've learnt so far has been from either
                     <a href="https://www.codeacademy.com">Codeacademy</a>, or
