--- a/wPostOne.html
+++ b/wPostOne.html
@@ -67,8 +67,8 @@
                     <br>I got the inspiration from <a href="http://daneden.me">Daniel Eden</a>                    and his generative art. My process for creating this involved
                     no such loveliness however. It was simple a doodle drawn
                     with the brush tool and then 50 layers of the same shape,
-                    each layer 4% smaller than the other. Not especially fun,
-                    but a nice, trippy, light-speed, tunnel-esque result.
+                    each layer 4% smaller than the previous. Not especially
+                    fun, but a nice, trippy, light-speed, tunnel-esque result.
                     <br>Thanks for reading.</p>
             </td>
             <td class="postC3"></td>
