--- a/wnb.html
+++ b/wnb.html
@@ -24,7 +24,7 @@
             <h1 id="wMainTitle" class="animated flipInX">Welcome to the <span id="dark">dark</span> fun side...</h1>
             <br>
             <p id="wIntro">This page is intended to be a little more light-hearted and less
-                professional than my portfolio. Here, i'll post the odd peice
+                professional than my portfolio. Here, I'll post the odd peice
                 of writing, any design work I'm particularly proud of and whatever
                 else takes my fancy (hence the somewhat sensical name). This
                 page will be a little more about who I am, rather than what
