Gone for a much simpler and pretty much whiter theme. Pretty happy eith this now

--- a/pf.html
+++ b/pf.html
@@ -25,7 +25,7 @@
             <br><br>
 
             <a class="postLinks" href="pfPostOne.html">
-                <div class="postBox pfPostOne">
+                <div class="pfPostBox pfPostOne">
                     <h1 class="postH1">Kyesmith.me, 16/3/17</h1>
                     <p class="postP">Hint: You're looking at it...</p>
                 </div>
