--- a/wnb.html
+++ b/wnb.html
@@ -32,7 +32,7 @@
             <br>
 
             <a class="postLinks" href="wPostOne.html">
-                <div class="postBox wPostOne">
+                <div class="wPostBox wPostOne">
                     <h1 class="postH1">My photoshop fun, 16/3/17</h1>
                     <p class="postP">Just some doodles from my first few times cracking on with
                         Adobe Photoshop.
