Removed changes from previous commit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class="iAll">
 		<div class="navBar">
 			<a class="btn btn-h" href="index.html#navBar">Home</a>
-			<a class="btn btn-p" href="pf.html">Portfolio</a>
+			<a class="btn btn-p" href="portfolio.html">Portfolio</a>
 			<a class="btn btn-wnb" href="wnb.html">the WhatNotBlog</a>
 		</div>
 		<a id="navBar"></a>
