--- a/wnb.html
+++ b/wnb.html
@@ -14,9 +14,8 @@
 
     <div class="wAll">
         <div class="navBar">
-            <a id="navBar"></a>
             <a class="btn btn-h" href="index.html#navBar">Home</a>
-            <a class="btn btn-p" href="pf.html">Portfolio</a>
+            <a class="btn btn-p" href="portfolio.html">Portfolio</a>
             <a class="btn btn-wnb" href="wnb.html">the WhatNotBlog</a>
         </div>
 
