--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <div class="pfAll">
         <div class="navBar">
             <a class="btn btn-h" href="index.html#navBar">Home</a>
-            <a class="btn btn-p" href="pf.html">Portfolio</a>
+            <a class="btn btn-p" href="portfolio.html">Portfolio</a>
             <a class="btn btn-wnb" href="wnb.html">the WhatNotBlog</a>
         </div>
         <div class="pfAllText">
@@ -59,5 +59,8 @@
     ga('create', 'UA-93105385-1', 'auto');
     ga('send', 'pageview');
 </script>
+
+</html>
+
 
 </html>
