Grammar and housekeeping

--- a/postLayout.html
+++ b/postLayout.html
@@ -69,6 +69,8 @@
                     a magna. Curabitur pulvinar et massa nec dapibus. Ut ex
                     tortor, pharetra auctor ex eu, auctor sollicitudin nibh.
                     Donec dapibus elementum velit.</p>
+                <br><br>
+                <p>Huli pau,<br>Kye Smith</p>
             </td>
             <td class="postC3"></td>
         </tr>
