--- a/wnb.html
+++ b/wnb.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Who knows?</title>
+    <title>Wai Ikes?</title>
     <meta name="author" content="Kye Leslie Jay Smith">
     <link href="style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins|Titillium+Web" rel="stylesheet">
