--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title> Activities yo. </title>
+	<title>Aloha.</title>
 	<meta name="author" content="Kye Leslie Jay Smith">
 	<link href="style.css" type="text/css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins|Titillium+Web" rel="stylesheet">
@@ -30,9 +30,9 @@
 		<a id="navBar"></a>
 		<div id="iBio">
 			<p>Hello there.<br> As you may have guessed,
-				<a href="https://youtu.be/sNPnbI1arSE?t=9">my name is</a> Kye Smith. I'm
-				a third year Electronic Engineering undergraduate at the University of sheffield
-				and this is my website. Feel free to take a look around.
+				<a href="https://youtu.be/sNPnbI1arSE?t=9" target="_blank">my name is</a>				Kye Smith. I'm a third year Electronic Engineering undergraduate at the
+				University of sheffield and this is my website. Feel free to take a look
+				around.
 			</p>
 		</div>
 
