--- a/pfPostOne.html
+++ b/pfPostOne.html
@@ -14,7 +14,7 @@
     <table>
         <tr>
             <td class="postC1">
-                <a href="pf.html">
+                <a href="portfolio.html">
                     <div class="returnBtn">
                         <h1><</h1>
                         <br>
@@ -37,26 +37,36 @@
                 <h2 class="postH2">16/03/2017</h2>
                 <br>
                 <p class="postP">It seemed rather appropriate that the first piece of work to
-                    talk about on here should be the website itself! I started
-                    on this site in the middle of February 2017 and it's been
-                    quite a learning curve as this has been my first time using
-                    HTML. Everything I've learnt so far has been from either
-                    <a href="https://www.codeacademy.com">Codeacademy</a>, or
-                    from bugging my good friend, <a href="http://Jamesmilton.me">James</a>.
-                    The whole thing is hosted on github pages for free
-                    <a href="https://github.com/SmithKy3/Kyesmith.me">(here, take a gander)</a>,
-                    and the domain name was free for a year with github's student
-                    developer pack.
+                    talk about on here should be the website itself. I started
+                    work on this site in the middle of February 2017 and it
+                    has quickly become a small addiction. It seems there is
+                    always spomething else I could add or change or tweak. As
+                    fun as it is though, it can be equally, if not more, challenging
+                    at times. This being due to the fact that before this site,
+                    I had zero experience writing HTML or CSS. This site is
+                    a guinea pig of sorts.
+                    <br>The majority of everything I've learnt so far has been
+                    from either
+                    <a href="https://www.codeacademy.com">Codeacademy</a>, with
+                    the rest of the help coming from google or from bugging
+                    my good friend, <a href="http://Jamesmilton.me">James</a>.
+                    The site is hosted on github pages for free
+                    <a href="https://github.com/SmithKy3/Kyesmith.me">(here, for anyone interested in the code)</a>,
+                    and the domain name was free, from NameCheap, for a year
+                    with github's student developer pack.
                     <br> I've been trying to write all of the code myself as
-                    I wanted this website to be "homemade" in a sense, and I've,
-                    generally, stuck to this. There are several "fancy" parts
-                    of the site that I've used
-                    <a href="https://Codepen.io">Codepen</a> for due to the
-                    complexity of them/the use of javascript (which I haven't
-                    taken the time to become accustom with... yet). These still
-                    required some changes to get them working/customise them
-                    though so it was fun to take a look at the code and it provided
-                    some insight into higher level HTML and CSS.</p>
+                    I wanted this website to be "homemade", I don't like the
+                    idea of not understanding how a part of my own website works.
+                    It's mine, I should be able to fix it. This is something
+                    I've almost completely stuck to as well. At the time of
+                    writing this, only one feature of the site was not written
+                    by myself, and that's a scroll animation using javascript.(which
+                    I haven't taken the time to become accustom with... yet).
+                    The code for this came from <a href="https://Codepen.io">Codepen</a>.
+                    As my programming abilities grow, I intend to make the site
+                    100% original however.</p>
+                <br><br>
+                <p>Huli pau,<br>Kye Smith</p>
             </td>
             <td class="postC3"></td>
         </tr>
@@ -65,3 +75,13 @@
 </body>
 
 </html>
+<p>Huli pau,<br>Kye Smith
+    <p>
+        </td>
+        <td class="postC3"></td>
+        </tr>
+        </table>
+
+        </body>
+
+        </html>
