--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> Aloha. </title>
+    <title>E Komo Mai.</title>
     <meta name="author" content="Kye Leslie Jay Smith">
     <link href="style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins|Titillium+Web" rel="stylesheet">
