--- a/wPostOne.html
+++ b/wPostOne.html
@@ -33,43 +33,47 @@
                 </a>
             </td>
             <td class="postC2">
-                <h1 class="postH1">Yeah, just a bit o' PS</h1>
+                <h1 class="postH1">Just A Bit o' Photo(shop)</h1>
                 <h2 class="postH2">16/03/17</h2>
                 <br>
                 <p class="postP">As I've been building this website, I seem to have inherited
                     a much larger appetite for creation; a need to satiate a
                     deep hunger for "making stuff".
-                    <br> So, natuarally, I turned to photoshop. Now, photoshop
-                    is a bit of software that I've always fancied getting myself
-                    accquainted with (to anyone feeling the same way; do it).
-                    However, It's something I've never taken the necessary time
-                    out for. Until now obviously.
-                    <br>I decided a fun first project would be just trying to
-                    "cartoonise" a photo of someone, that lucky someone being
-                    my girlfriend Rachel (I'm sure she'll be super pleased this
-                    is getting uploaded).
+                    <br> So, natuarally, I turned to photoshop. Photoshop is
+                    a peice of software that I've always fancied getting myself
+                    accquainted with (to anyone feeling the same way; do it,
+                    and do it soon). However, It's something I've never taken
+                    the necessary time out for. Until now obviously.
+                    <br>I decided a fun, and simple enough, first project would
+                    be trying to "cartoonise" a photo of someone. That lucky
+                    someone just so happened to be my girlfriend Rachel (I'm
+                    sure she'll be super pleased this is getting uploaded).
                     <br>
-                    <img src="Rach1_COM.jpg" id="rach1">
+                    <img src="rachOneCOM.jpg" id="rach1">
                     <br> This first attempt was a little rough as I hadn't yet
-                    become accquainted with any of the tools really.
-                    <br>So I tried again. And I'd discovered the pen tool (and
-                    the fill bucket... took a while I know).
+                    gotten used to any of the tools really.
+                    <br>So I tried again. And this time I'd discovered the pen
+                    tool and its ability in the curved line department (...
+                    took a while,I know).
                     <br>
-                    <img src="Rach2_COM.png" id="rach2">
-                    <br>I feel this one came out a lot better, although I'm
-                    pretty pleased with the pair considering these were my first
-                    two times ever even opening photoshop.
+                    <img src="rachTwoCOM.png" id="rach2">
+                    <br>I feel this one came out a lot smoother and better generally.
+                    Overall though I'm pretty pleased with the pair, especially
+                    for my first couple of attempts.
                     <br>The next time I wanted to change it up a bit, and I
                     wanted to get something made in a relatively short time.
                     This is what I came up with:
                     <br>
-                    <img src="de_COM.png" id="de">
-                    <br>I got the inspiration from <a href="http://daneden.me">Daniel Eden</a>                    and his generative art. My process for creating this involved
-                    no such loveliness however. It was simple a doodle drawn
-                    with the brush tool and then 50 layers of the same shape,
-                    each layer 4% smaller than the previous. Not especially
-                    fun, but a nice, trippy, light-speed, tunnel-esque result.
-                    <br>Thanks for reading.</p>
+                    <img src="deCOM.png" id="de">
+                    <br>I got the inspiration from <a href="http://daneden.me">Daniel Eden</a>.
+                    More specifically, his generative art, which is something
+                    I intend to delve into at some point. The above peice however,
+                    was simply a doodle drawn with the brush tool and then 50
+                    layers of the same shape, each layer 4% smaller than the
+                    previous. Not especially fun, but im a fan of the light-speed,
+                    tunnel-esque result.</p>
+                <br><br>
+                <p>Huli pau,<br>Kye Smith</p>
             </td>
             <td class="postC3"></td>
         </tr>
