--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div id="iBio">
 			<p>Hello there.<br> As you may have guessed,
 				<a href="https://youtu.be/sNPnbI1arSE?t=9" target="_blank">my name is</a>				Kye Smith. I'm a third year Electronic Engineering undergraduate at the
-				University of sheffield and this is my website. Feel free to take a look
+				University of Sheffield and this is my website. Feel free to take a look
 				around.
 			</p>
 		</div>
