--- a/pfPostOne.html
+++ b/pfPostOne.html
@@ -66,7 +66,7 @@
                     As my programming abilities grow, I intend to make the site
                     100% original however.</p>
                 <br><br>
-                <p>Huli pau,<br>Kye Smith</p>
+                <p class="postP">Huli pau,<br>Kye Smith</p>
             </td>
             <td class="postC3"></td>
         </tr>
@@ -75,13 +75,3 @@
 </body>
 
 </html>
-<p>Huli pau,<br>Kye Smith
-    <p>
-        </td>
-        <td class="postC3"></td>
-        </tr>
-        </table>
-
-        </body>
-
-        </html>
