--- a/wPostOne.html
+++ b/wPostOne.html
@@ -73,7 +73,7 @@
                     previous. Not especially fun, but im a fan of the light-speed,
                     tunnel-esque result.</p>
                 <br><br>
-                <p>Huli pau,<br>Kye Smith</p>
+                <p class="postP">Huli pau,<br>Kye Smith</p>
             </td>
             <td class="postC3"></td>
         </tr>
