Changed home page, more changes coming soon

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 </head>
 
 <body>
-	<div class="parallaxImg">
-		<img src="helloWorld.gif">
+	<div class="parallaxArea">
+		<div class="parallaxImg">
+			<img src="homeDrawing.jpg">
+		</div>
+		<a id="parallaxBtnLink" href="#navBar">
+			<div class="parallaxBtn animated fadeInUp" href="#navBar">What's going on here?</div>
+		</a>
 	</div>
-	<div class="parallaxBtn">
-		<br>
-		<a href="#navBar"><span id="arrow" class="animated infinite tada">&#9660;</span></a>
 	</div>
 
 	<div class="iAll">
@@ -31,7 +33,7 @@
 		<div id="iBio">
 			<p>Hello there.<br> As you may have guessed,
 				<a href="https://youtu.be/sNPnbI1arSE?t=9" target="_blank">my name is</a>				Kye Smith. I'm a third year Electronic Engineering undergraduate at the
-				University of sheffield and this is my website. Feel free to take a look
+				University of Sheffield and this is my website. Feel free to take a look
 				around.
 			</p>
 		</div>
