--- a/wPostOne.html
+++ b/wPostOne.html
@@ -34,7 +34,7 @@
             </td>
             <td class="postC2">
                 <h1 class="postH1">Just A Bit o' Photo(shop)</h1>
-                <h2 class="postH2">16/03/17</h2>
+                <h2 class="postH2">16/03/2017</h2>
                 <br>
                 <p class="postP">As I've been building this website, I seem to have inherited
                     a much larger appetite for creation; a need to satiate a
@@ -65,15 +65,15 @@
                     This is what I came up with:
                     <br>
                     <img src="deCOM.png" id="de">
-                    <br>I got the inspiration from <a href="http://daneden.me">Daniel Eden</a>.
-                    More specifically, his generative art, which is something
-                    I intend to delve into at some point. The above peice however,
-                    was simply a doodle drawn with the brush tool and then 50
-                    layers of the same shape, each layer 4% smaller than the
-                    previous. Not especially fun, but im a fan of the light-speed,
-                    tunnel-esque result.</p>
+                    <br>I got the inspiration from <a href="http://daneden.me"
+                        target="_blank">Daniel Eden</a>. More specifically, his
+                    generative art, which is something I intend to delve into
+                    at some point. The above peice however, was simply a doodle
+                    drawn with the brush tool and then 50 layers of the same
+                    shape, each layer 4% smaller than the previous. Not especially
+                    fun, but im a fan of the light-speed, tunnel-esque result.</p>
                 <br><br>
-                <p>Huli pau,<br>Kye Smith</p>
+                <p class="postP">Huli pau,<br>Kye Smith</p>
             </td>
             <td class="postC3"></td>
         </tr>
