--- a/wnb.html
+++ b/wnb.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Wai Ikes?</title>
+    <title>O Wai Ka Mea I Ike?</title>
     <meta name="author" content="Kye Leslie Jay Smith">
     <link href="style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins|Titillium+Web" rel="stylesheet">
@@ -26,19 +26,28 @@
                 professional than my portfolio. Here, I'll post the odd peice
                 of writing, any design work I'm particularly proud of and whatever
                 else takes my fancy (hence the somewhat sensical name). This
-                page will be a little more about who I am, rather than what
-                I can do/have done.</p>
+                page should give you more of an idea about who I am, rather
+                than what I can do/have done.</p>
             <br>
 
             <a class="postLinks" href="wPostOne.html">
                 <div class="wPostBox wPostOne">
                     <h1 class="postH1">My photoshop fun, 16/3/17</h1>
                     <p class="postP">Just some doodles from my first few times cracking on with
-                        Adobe Photoshop.
-                        <p>
+                        Adobe Photoshop.</p>
                 </div>
+            </a>
+            <br>
+            <a class="postLinks" href="wPostTwo.html">
+                <div class="wPostBox wPostTwo">
+                    <h1 class="postH1">Daniel Edog, 24/3/17</h1>
+                    <p class="postP">Another quick doodle.</p>
+                </div>
+            </a>
         </div>
-
+        <br><br>
     </div>
 
-</body </html>
+</body>
+
+</html>
