--- a/pfPostOne.html
+++ b/pfPostOne.html
@@ -47,11 +47,11 @@
                     a guinea pig of sorts.
                     <br>The majority of everything I've learnt so far has been
                     from either
-                    <a href="https://www.codeacademy.com">Codeacademy</a>, with
-                    the rest of the help coming from google or from bugging
-                    my good friend, <a href="http://Jamesmilton.me">James</a>.
+                    <a href="https://www.codeacademy.com" target="_blank">Codeacademy</a>,
+                    with the rest of the help coming from google or from bugging
+                    my good friend, <a href="http://Jamesmilton.me" target="_blank">James</a>.
                     The site is hosted on github pages for free
-                    <a href="https://github.com/SmithKy3/Kyesmith.me">(here, for anyone interested in the code)</a>,
+                    <a href="https://github.com/SmithKy3/Kyesmith.me" target="_blank">(here, for anyone interested in the code)</a>,
                     and the domain name was free, from NameCheap, for a year
                     with github's student developer pack.
                     <br> I've been trying to write all of the code myself as
@@ -62,11 +62,11 @@
                     writing this, only one feature of the site was not written
                     by myself, and that's a scroll animation using javascript.(which
                     I haven't taken the time to become accustom with... yet).
-                    The code for this came from <a href="https://Codepen.io">Codepen</a>.
-                    As my programming abilities grow, I intend to make the site
-                    100% original however.</p>
+                    The code for this came from <a href="https://Codepen.io"
+                        target="_blank">Codepen</a>. As my programming abilities
+                    grow, I intend to make the site 100% original however.</p>
                 <br><br>
-                <p>Huli pau,<br>Kye Smith</p>
+                <p class="postP">Huli pau,<br>Kye Smith</p>
             </td>
             <td class="postC3"></td>
         </tr>
@@ -75,13 +75,3 @@
 </body>
 
 </html>
-<p>Huli pau,<br>Kye Smith
-    <p>
-        </td>
-        <td class="postC3"></td>
-        </tr>
-        </table>
-
-        </body>
-
-        </html>
