--- a/postLayout.html
+++ b/postLayout.html
@@ -70,7 +70,7 @@
                     tortor, pharetra auctor ex eu, auctor sollicitudin nibh.
                     Donec dapibus elementum velit.</p>
                 <br><br>
-                <p>Huli pau,<br>Kye Smith</p>
+                <p class="postP">Huli pau,<br>Kye Smith</p>
             </td>
             <td class="postC3"></td>
         </tr>
