Testing push with laptop

--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <html>
 
 <head>
-    <meta name="author" content="Kye Leslie Jay Smith">
-    <link href="style.css" type="text/css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Pacifico|Poppins|Titillium+Web|VT323"
-        rel="stylesheet">
-    <link href="animate.css" type="text/css" rel="stylesheet">
+  <meta name="author" content="Kye Leslie Jay Smith">
+  <link href="style.css" type="text/css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico|Poppins|Titillium+Web|VT323" rel="stylesheet">
+  <link href="animate.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
-    <div id="sgntrSection">
-        K y e S m i t h . m e
-    </div>
+  <div id="sgntrSection">
+    K y e s m i t h . m e
+  </div>
 
-    <div id="undCnstSection">
-        <p>Site Under Construction</p>
-    </div>
+  <div id="undCnstSection">
+    <p>Site Under Construction</p>
+  </div>
 </body>
 
 </html>
