--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
 
   <div id="undCnstSection">
-    <p>Site Under Construction</p>
+    <p>Site Under Construction... (still...)... ((we're getting there))...</p>
   </div>
 </body>
 
